syntax = "proto3";

// TODO: support protobuff any
// import google/protobuf/any.proto
import "google/protobuf/timestamp.proto";
package Ekati.Protocol.Grpc;


message FlatNode {
    bytes flatBuffer = 1;
}

message QueryRequest {
    string queryText = 2;
}

message PutResponse{
    bool success = 1;
}

message GetRequest{
    repeated string iris = 1;
}

message GetMetricsResponse{
    message Metric {
        float value =1;
        string name = 2;
        google.protobuf.Timestamp time = 3;
    }
    repeated Metric metrics = 1;
}
message GetMetricsRequest{
    repeated string names = 1;
}
message GetStatsRequest{
    message Stat{
        float value = 1;
        string topic = 2;
        string stat = 3;
    }
    repeated Stat stats = 1;
}
message GetStatsResponse{
    repeated string names = 1;
}
message ListStatsRequest{
    repeated string match = 1;
}
message ListStatsResponse{
    repeated string names = 1;
}
message LoadFile{
    string type = 1;
    string path = 2;
}
message LoadFileResponse{
    int64 progress = 1;
    int64 length = 2;
}
message Followers {
    repeated string follower =1;
}
message ShardAssignment{
    repeated string leaders = 1;
    repeated Followers followers = 2;
}
message QueryResponse{
    oneof message {
        FlatNode node = 1 ;
        LoadFileResponse loadFileResponse = 2;
        PutResponse PutResponse = 3;
    }
}

service WatDbService {
    rpc Load (LoadFile) returns (stream QueryResponse) {}
    rpc Put (FlatNode) returns (stream QueryResponse) {}
    rpc Query ( QueryRequest) returns (stream QueryResponse){};
    rpc Get (GetRequest) returns (stream QueryResponse) {}

    rpc GetMetrics (GetMetricsRequest) returns (GetMetricsResponse){}
    rpc GetStats (GetStatsRequest) returns (GetStatsResponse){}
    rpc ListStats (ListStatsRequest) returns (ListStatsResponse){}
    rpc GetShardAssignment (ShardAssignment) returns (ShardAssignment){}
}